--- a/src/Components/HeaderComponents/NavigationComponets/Navigation.css
+++ b/src/Components/HeaderComponents/NavigationComponets/Navigation.css
@@ -11,70 +11,62 @@
  background-color: #00a8ff;
  background-color: #18dcff;
 } */
-.nav-outer{
-    /* border: 1px solid #222B45; */
+.nav-outer{    
+  
+    position: relative;
+    height: 5rem;
+    width: 99vw;
+    border: 1px solid #222B45;
     /* background-color: transparent; */
-    /* background-color:  #303952; */
-    background-color: #fbfcff;
+    background-color:  #14192F;
+    /* background-color: #fbfcff; */
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-evenly;
-    /* position:relative */
+
 }
 
-/* .logo-box{
-  font-size: 1.8rem;
-  border: 1px solid #04d1f5;
-  color: #04d1f5;
-} */
+
 
 ul {
-    position: sticky;
-    background-color:#8caafd ;
+    margin: 0.2rem 0rem;
+    position: fixed;
+    background-color: transparent;
+    /* background-color: white; */
+    /* background-color:#88a8ff ; */
     /* background-color:#464c5c ; */
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     list-style-type: none;
     /* border: 1px solid #04d1f5; */
-    border-top: 3px solid  #182035;
+    border-top: 3px solid  #88a8ff;
     /* border-left: 4px solid  #182035; */
-    border-bottom: 3px solid  #e8e8eb;
+    border-bottom: 3px solid  #88a8ff;
     /* border-right: 4px solid  #e8e8eb; */
     padding: 0.5rem;
     border-radius: 10px;
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
+
+
     
 }
-ul li{
+.link-list li{
     margin: 0rem 0.2rem;
-    font-size: 1.5rem;
+    color: #88a8ff;
     padding: 0.5rem 2rem;
     /* color: #1148CC; */
-    color: #88a8ff;
+   
 }
 
-.Dark-light-mode{
- padding: 0.6rem 0.8rem;
- /* border: 1px solid rgb(250, 250, 252); */
- border-radius: 50px;
- box-shadow: rgb(197, 195, 195) 0px 0.5px 4px 0px;
+.link-list li a{
+    font-size: 1.5rem;
+    color: #91aeff;
 }
-.DM-img{
-   font-size: 1.4rem;
-   color: #88a8ff;
+:active{
+    color: #f8f9fc;
+}
 
-}
-.LM-img{
-   font-size: 1.4rem;
-   color: #88a8ff;
-
-}
-.DLM-btn{
-    border: none;
-    background-color: transparent;
-    outline: none;
-}
