--- a/src/Components/BodyComponents/ContactComponents/ContactForm.css
+++ b/src/Components/BodyComponents/ContactComponents/ContactForm.css
@@ -13,6 +13,9 @@
     }
     
     .contact-inner{
+
+        margin: 3.5rem 0rem;
+       
     z-index: 1;
     border: 1px solid #3B4053;
     /* background-color: white; */
