added styling for contact form

--- a/src/Components/BodyComponents/ContactComponents/ContactForm.css
+++ b/src/Components/BodyComponents/ContactComponents/ContactForm.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     background-color: #14192f;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     }
     
     .contact-inner{
