added styling in Project cards

--- a/src/Components/BodyComponents/ProjectComponents/ProjectCards.css
+++ b/src/Components/BodyComponents/ProjectComponents/ProjectCards.css
@@ -72,3 +72,22 @@
   .link-btn a:hover {
     color: #6158E2;
   }
+
+  @media (min-width: 240px) {
+  }
+  @media (min-width: 375px) {
+  }
+  @media (min-width: 640px) {
+  }
+  
+  @media (min-width: 768px) {
+  }
+  
+  @media (min-width: 1024px) {
+  }
+  
+  @media (min-width: 1280px) {
+  }
+  
+  @media (min-width: 1536px) {
+  }
