--- a/src/Components/BodyComponents/SkillComponents/SkillCards.css
+++ b/src/Components/BodyComponents/SkillComponents/SkillCards.css
@@ -1,15 +1,17 @@
 .card-outer{
     height: 9vh;
-    width: 12vw;
+    width: 14vw;
     /* border-radius: 8px; */
-    border: 1px solid rgb(86, 81, 187);
+    /* border: 1px solid rgb(86, 81, 187); */
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     margin: 0.5rem;
-    padding: 0.5rem 1rem;
+    padding: 1rem 1rem;
+  box-shadow: #000000 0px 1px 6px;
+
 /* background-color: #6188f3; */
     
     /* box-shadow: rgba(28,26,28, 0.7) 0px 2px 8px 0px; */
