edited styling in SkillCounter

--- a/src/Components/BodyComponents/SkillComponents/SkillCounter.css
+++ b/src/Components/BodyComponents/SkillComponents/SkillCounter.css
@@ -21,7 +21,7 @@
       z-index: 1;
       height: auto;
     width: 63vw;
-    /* border: 1px solid #f7f8fc; */
+    border: 1px solid #5a5a5a;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap-reverse;
@@ -33,17 +33,17 @@
     padding: 1rem 0rem;
     -webkit-backdrop-filter: blur(12px); 
      backdrop-filter: blur(12px);
-    box-shadow: rgb(72, 72, 73) 0px 1px 2px 0px, rgb(44, 45, 63) 0px 2px 6px 2px;
+    /* box-shadow: rgb(72, 72, 73) 0px 1px 2px 0px, rgb(44, 45, 63) 0px 2px 6px 2px; */
     }
     .skill-display{
       /* border: 1px solid white; */
-      height: 36rem;
+      height: 30rem;
     width: 30vw;
       display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
         /* border: 1px solid rgb(11, 206, 125); */
     }
     
