--- a/src/Components/HeaderComponents/HomeComponent/Home.css
+++ b/src/Components/HeaderComponents/HomeComponent/Home.css
@@ -1,7 +1,7 @@
 .home-outer{
-    margin-top: -55px;
+
     /* border: 1px solid red; */
-    height: 100vh;
+    height: 99vh;
     width: 99vw;
     display: flex;
     flex-direction: row;
@@ -10,11 +10,13 @@
     justify-content: center ;
     /* background-color:  #101426; */
     background-color:  #14192F;
-    /* position: absolute; */
+    position: relative;
+    
     
 }
 
 .intro-box{
+    position: absolute;
     padding: 0.5rem;
     height: 50vh;
     width: 63vw;
