--- a/src/Components/BodyComponents/ContactComponents/ContactFormMedia.css
+++ b/src/Components/BodyComponents/ContactComponents/ContactFormMedia.css
@@ -1,145 +1,120 @@
 @media (min-width: 240px) {
 }
-@media (min-width: 375px) {
+
+@media (min-width: 370px) {
     .contact-outer{
         height: auto;
-        width: 99vw;
-        padding: 4rem 0rem
-        /* z-index: 1; */;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-items: center;
-        justify-content: center;
-        background-color: #14192f;
-        border: 1px solid red;
+        width: 100%;
+        /* border: 1px solid red; */
         }
         
         .contact-inner{
-    
-            margin: 3.5rem 0rem;
-           
-        z-index: 1;
-        border: 1px solid #3B4053;
-        /* background-color: white; */
-        background-color: transparent;
-        height: auto;
         width: 80vw;
         padding: 1rem 1rem;
-        /* z-index: 1; */;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items:normal;
-        justify-content: space-around;
         /* border: 1px solid red; */
         
         }
         
         .form-heding{
-            padding: 0.5rem 0rem ;
-            font-size: 2rem;
-            font-weight: 400;
-            color: #6158E2;
+            font-size: 1.5rem;
         /* border: 1px solid red; */
-        
         }
         
         .form{
-        z-index: 1;
         height: 34rem;
         width: 75vw;
-        padding: 1rem 1rem;
         /* border: 1px solid red; */
-        /* color: rgb(10, 10, 10); */
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        align-items: flex-start;
-        justify-content: space-around;
         }
         
         .lable{
         /* border: 1px solid red; */
-          padding: 0.2rem 0.2rem ;
             font-size: 1.1rem;
-            color: #88A8FF;
-        
         }
         .input-text{
             width: 16rem;
-            border: 1px solid #6158E2;
-            padding:0.4rem 0.5rem;
-            font-size: 1.1rem;
-            border-radius: 10px;
-            outline: none;
-            color: #8f87f7;
-            background-color: transparent;
-        
-        }
-        
-        .input-text:is(:focus){
-            border:1px solid  transparent;
-            box-shadow: 0px 0px 3px #aba5f8;
+            font-size: 1.1rem;        
         }
         
         .input-textarea{
             width:16rem;
             height: 10rem;
-            border: 1px solid #6158E2;
-            padding:0.5rem 0.5rem;
-            font-size: 1.2rem;
-            border-radius: 10px;
-            outline: none;
-            color: #8f87f7;
-            resize: none;
-            background-color: transparent;    
-        
+        }
+        .form-error{
+            font-size: 0.8rem;
+            font-weight: 100;
+            padding: 0.1rem 0.2rem;
         }
         
-        .input-textarea:is(:focus){
-            border:1px solid  transparent;
-            box-shadow: 0px 0px 3px #aba5f8;
-        }
-        
-        .input-textarea::-webkit-scrollbar{ 
-            width: 5px solid white;
-        }
-        
-        ::placeholder{
-            color: #b8b3ff;
-            font-weight: 200;
-            font-size: 1.1rem;
-        }
         .input-submit{
-        
-            border: 1px solid #6158E2;
-            border-radius: 10px;
-            color: #6158E2;
-            font-size: 1.1rem;
-            font-weight: 600;
-            padding: 0.5rem 1.5rem;
-            background-color: transparent;
-            transition: 1s;
-            outline: none;
-        
+            width: 16rem;
+            /* border: 1px solid #eb3a04; */
         }
-        .input-submit:hover{
-            border: 1px solid transparent;
-        
-            color: #d4d4d4;
-            box-shadow: 0px 0px 3px #aba5f8;
-            background-color: #6158E2;
-        
-        }
-        
-        
-        
         .contact-image-outer{
             /* border: 1px solid red; */
-            background-color: transparent;
+            margin: 0.5rem 0rem;
+           
         }
         
+        .contact-image{
+            height:15rem;
+            width: 16rem;
+        }
+}
+@media (min-width: 375px) {
+    .contact-outer{
+        height: auto;
+        width: 100%;
+        /* border: 1px solid red; */
+        }
+        
+        .contact-inner{
+        width: 80vw;
+        padding: 1rem 1rem;
+        /* border: 1px solid red; */
+        
+        }
+        
+        .form-heding{
+            font-weight: 500;
+            font-size: 1.4rem;
+            padding: 0.5rem 1rem;
+        /* border: 1px solid red; */
+        }
+        
+        .form{
+        height: 34rem;
+        width: 75vw;
+        /* border: 1px solid red; */
+        }
+        
+        .lable{
+        /* border: 1px solid red; */
+            font-size: 1.1rem;
+        }
+        .input-text{
+            width: 16rem;
+            font-size: 1.1rem;        
+        }
+        
+        .input-textarea{
+            width:16rem;
+            height: 10rem;
+        }
+        .form-error{
+            font-weight: 100;
+            font-size: 0.8rem;
+            padding: 0.1rem 0.2rem;
+        }
+        
+        .input-submit{
+            width: 16rem;
+            /* border: 1px solid #eb3a04; */
+        }
+
+        .contact-image-outer{
+            /* border: 1px solid red;    */
+            margin: 0.5rem 0rem;
+        }
         
         .contact-image{
             height:15rem;
@@ -147,160 +122,352 @@
         }
 }
 @media (min-width: 640px) {
+    .contact-outer{
+        height: auto;
+        width: 100%;
+        /* border: 1px solid red; */
+        }
+        
+        .contact-inner{
+        width: 80vw;
+        padding: 1rem 1rem;
+        /* border: 1px solid red; */
+        }
+        
+        .form-heding{
+            font-size: 2rem;
+        /* border: 1px solid red; */
+        padding: 0.5rem 1rem;
+        }
+        
+        .form{
+        height: 34rem;
+        width: 60vw;
+        /* border: 1px solid red; */
+        }
+        
+        .lable{
+        /* border: 1px solid red; */
+            font-size: 1.2rem;
+        }
+        .input-text{
+            width: 22rem;
+            font-size: 1.2rem;        
+        }
+        
+        .input-textarea{
+            width: 22rem;
+            height: 10rem;
+        }
+        .form-error{
+            font-size: 0.9rem;
+        }
+        
+        .input-submit{
+            width: 22rem;
+            /* border: 1px solid #eb3a04; */
+        }
+        .contact-image-outer{
+            /* border: 1px solid red;    */
+            margin: 0.5rem 0rem;
+        }
+        
+        .contact-image{
+            height:24rem;
+            width: 24rem;
+        }
 }
 
 @media (min-width: 768px) {
+    .contact-outer{
+        height: auto;
+        width: 100%;
+        /* border: 1px solid red; */
+        }
+        
+        .contact-inner{
+        width: 65vw;
+        padding: 1rem 1rem;
+        /* border: 1px solid red; */
+        }
+        
+        .form-heding{
+            font-size: 2rem;
+        /* border: 1px solid red; */
+        padding: 0.5rem 1rem;
+        }
+        
+        .form{
+        height: 34rem;
+        width: 50vw;
+        /* border: 1px solid red; */
+        }
+        
+        .lable{
+        /* border: 1px solid red; */
+            font-size: 1.3rem;
+        }
+        .input-text{
+            width: 22rem;
+            font-size: 1.3rem;        
+        }
+        
+        .input-textarea{
+            width: 22rem;
+            height: 10rem;
+        }
+        .form-error{
+            font-size: 0.9rem;
+            font-weight: 200;
+
+        }
+        
+        .input-submit{
+            width: 22rem;
+            /* border: 1px solid #eb3a04; */
+        }
+        .contact-image-outer{
+            /* border: 1px solid red;    */
+            margin: 0.5rem 0rem;
+        }
+        
+        .contact-image{
+            height:24rem;
+            width: 24rem;
+        }
 }
 
 @media (min-width: 1024px) {
+    .contact-outer{
+        height: auto;
+        width: 100%;
+        /* border: 1px solid red; */
+        }
+        
+        .contact-inner{
+        width: 80vw;
+        padding: 1rem 1rem;
+        /* border: 1px solid red; */
+        }
+        
+        .form-heding{
+            font-size: 2rem;
+        /* border: 1px solid red; */
+        padding: 0.5rem 1rem;
+        }
+        
+        .form{
+        height: 34rem;
+        width: 38vw;
+        /* border: 1px solid red; */
+        }
+        
+        .lable{
+        /* border: 1px solid red; */
+            font-size: 1.3rem;
+        }
+        .input-text{
+            width: 22rem;
+            font-size: 1.3rem;        
+        }
+        
+        .input-textarea{
+            width: 22rem;
+            height: 10rem;
+        }
+        .form-error{
+            font-size: 0.9rem;
+            font-weight: 200;
+
+        }
+        
+        .input-submit{
+            width: 22rem;
+            /* border: 1px solid #eb3a04; */
+        }
+        .contact-image-outer{
+            /* border: 1px solid red;    */
+            margin: 0.5rem 0rem;
+        }
+        
+        .contact-image{
+            height:24rem;
+            width: 24rem;
+        }
 }
 
 @media (min-width: 1280px) {
+    .contact-outer{
+        height: auto;
+        width:99vw;
+        /* border: 1px solid red; */
+        }
+        
+        .contact-inner{
+        width: 80vw;
+        padding: 1rem 1rem;
+        /* border: 1px solid red; */
+        }
+        
+        .form-heding{
+            font-size: 2rem;
+        /* border: 1px solid red; */
+        padding: 0.5rem 1rem;
+        }
+        
+        .form{
+        height: 34rem;
+        width: 30vw;
+        /* border: 1px solid red; */
+        }
+        
+        .lable{
+        /* border: 1px solid red; */
+            font-size: 1.3rem;
+        }
+        .input-text{
+            width: 22rem;
+            font-size: 1.3rem;        
+        }
+        
+        .input-textarea{
+            width: 22rem;
+            height: 10rem;
+        }
+        .form-error{
+            font-size: 0.9rem;
+            font-weight: 200;
+
+        }
+        
+        .input-submit{
+            width: 22rem;
+            /* border: 1px solid #eb3a04; */
+        }
+        .contact-image-outer{
+            /* border: 1px solid red;    */
+            margin: 0.5rem 0rem;
+        }
+        
+        .contact-image{
+            height:26rem;
+            width: 26rem;
+        }
 }
 
 @media (min-width: 1536px) {
     .contact-outer{
         height: auto;
-        width: 99vw;
-        padding: 4rem 0rem
-        /* z-index: 1; */;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-items: center;
-        justify-content: center;
-        background-color: #14192f;
+        width:99vw;
         /* border: 1px solid red; */
         }
         
         .contact-inner{
-    
-            margin: 3.5rem 0rem;
-           
-        z-index: 1;
-        border: 1px solid #3B4053;
-        /* background-color: white; */
-        background-color: transparent;
-        height: auto;
-        width: 63vw;
-        padding: 1rem 2rem;
-        /* z-index: 1; */;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items:center;
-        justify-content: space-around;
+        width: 70vw;
+        padding: 1rem 1rem;
         /* border: 1px solid red; */
-        
         }
         
         .form-heding{
-            padding: 0.5rem 0rem ;
-            font-size: 2.2rem;
-            font-weight: 400;
-            color: #6158E2;
+            font-size: 2rem;
         /* border: 1px solid red; */
-        
+        padding: 0.5rem 1rem;
         }
         
         .form{
-        z-index: 1;
-        height: 30rem;
-        width: 30vw;
-        padding: 1rem 1rem;
+        height: 34rem;
+        width: 28vw;
         /* border: 1px solid red; */
-        /* color: rgb(10, 10, 10); */
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        align-items: flex-start;
-        justify-content: space-around;
         }
         
         .lable{
         /* border: 1px solid red; */
-          padding: 0.2rem 0.2rem ;
-            font-size: 1.2rem;
-            color: #88A8FF;
-        
+            font-size: 1.3rem;
         }
         .input-text{
-            width: 20rem;
-            border: 1px solid #6158E2;
-            padding:0.4rem 0.5rem;
-            font-size: 1.2rem;
-            border-radius: 10px;
-            outline: none;
-            color: #8f87f7;
-            background-color: transparent;
-        
-        }
-        
-        .input-text:is(:focus){
-            border:1px solid  transparent;
-            box-shadow: 0px 0px 3px #aba5f8;
+            width: 22rem;
+            font-size: 1.3rem;        
         }
         
         .input-textarea{
-            width: 20rem;
+            width: 22rem;
             height: 10rem;
-            border: 1px solid #6158E2;
-            padding:0.5rem 0.5rem;
-            font-size: 1.2rem;
-            border-radius: 10px;
-            outline: none;
-            color: #8f87f7;
-            resize: none;
-            background-color: transparent;    
-        
         }
-        
-        .input-textarea:is(:focus){
-            border:1px solid  transparent;
-            box-shadow: 0px 0px 3px #aba5f8;
-        }
-        
-        .input-textarea::-webkit-scrollbar{ 
-            width: 5px solid white;
-        }
-        
-        ::placeholder{
-            color: #b8b3ff;
+        .form-error{
+            font-size: 0.9rem;
             font-weight: 200;
-            font-size: 1.1rem;
+
         }
+        
         .input-submit{
-        
-            border: 1px solid #6158E2;
-            border-radius: 10px;
-            color: #6158E2;
-            font-size: 1.1rem;
-            font-weight: 600;
-            padding: 0.5rem 1.5rem;
-            background-color: transparent;
-            transition: 1s;
-            outline: none;
-        
+            width: 22rem;
+            /* border: 1px solid #eb3a04; */
         }
-        .input-submit:hover{
-            border: 1px solid transparent;
-        
-            color: #d4d4d4;
-            box-shadow: 0px 0px 3px #aba5f8;
-            background-color: #6158E2;
-        
-        }
-        
-        
-        
         .contact-image-outer{
-            /* border: 1px solid red; */
-            background-color: transparent;
+            /* border: 1px solid red;    */
+            margin: 0.5rem 0rem;
         }
-        
         
         .contact-image{
-            height:30rem;
-            width: 30rem;
+            height:26rem;
+            width: 26rem;
+        }
+}
+@media (min-width: 1600px) {
+    .contact-outer{
+        height: auto;
+        width:99vw;
+        /* border: 1px solid red; */
+        }
+        
+        .contact-inner{
+        width: 63vw;
+        padding: 1rem 1rem;
+        /* border: 1px solid red; */
+        }
+        
+        .form-heding{
+            font-size: 2rem;
+        /* border: 1px solid red; */
+        padding: 0.5rem 1rem;
+        }
+        
+        .form{
+        height: 34rem;
+        width: 28vw;
+        /* border: 1px solid red; */
+        }
+        
+        .lable{
+        /* border: 1px solid red; */
+            font-size: 1.3rem;
+        }
+        .input-text{
+            width: 22rem;
+            font-size: 1.3rem;        
+        }
+        
+        .input-textarea{
+            width: 22rem;
+            height: 10rem;
+        }
+        .form-error{
+            font-size: 0.9rem;
+            font-weight: 200;
+
+        }
+        
+        .input-submit{
+            width: 22rem;
+            /* border: 1px solid #eb3a04; */
+        }
+        .contact-image-outer{
+            /* border: 1px solid red;    */
+            margin: 0.5rem 0rem;
+        }
+        
+        .contact-image{
+            height:26rem;
+            width: 26rem;
         }
 }
