--- a/src/Components/BodyComponents/SkillComponents/SkillCardsMedia.css
+++ b/src/Components/BodyComponents/SkillComponents/SkillCardsMedia.css
@@ -1,12 +1,15 @@
 
 @media (min-width: 240px) {
+    
 }
 @media (min-width: 375px) {
     .card-outer{
         height: 4.5rem;
-        width: 14rem;
-        /* border-radius: 8px; */
+        width: 16rem;
+       
         border: 1px solid rgb(86, 81, 187);
+
+       
     }
 
     .logo-outer{
@@ -38,39 +41,44 @@
         }
 }
 @media (min-width: 640px) {
+    .card-outer{
+        height: 4.5rem;
+        width: 20rem;
+        border: 1px solid rgb(86, 81, 187);
+    }
 }
 
 @media (min-width: 768px) {
+    .card-outer{
+        height: 4.5rem;
+        width: 16rem;
+        /* border: 1px solid rgb(86, 81, 187); */
+    }
 }
 
 @media (min-width: 1024px) {
+    .card-outer{
+        height: 4.5rem;
+        width: 18rem;
+        /* border: 1px solid rgb(86, 81, 187); */
+    }
 }
 
 @media (min-width: 1280px) {
+    .card-outer{
+        height: 5rem;
+        width: 18rem;
+        /* border: 1px solid rgb(86, 81, 187); */
+    }
 }
 
 @media (min-width: 1536px) {
     .card-outer{
-        height: 9vh;
-        width: 14vw;
-        /* border-radius: 8px; */
+        height: 5.2rem;
+        width: 18rem;
         /* border: 1px solid rgb(86, 81, 187); */
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        margin: 0.5rem;
-        padding: 1rem 1rem;
-      box-shadow: #000000 0px 1px 6px;
-    
-    /* background-color: #6188f3; */
-        
-        /* box-shadow: rgba(28,26,28, 0.7) 0px 2px 8px 0px; */
     }
-    /* .card-outer:hover{
-        background-color: #88A8FF;
-    } */
+
     
     .logo-outer{
     /* border: 1px solid red; */
