--- a/src/Components/HeaderComponents/HomeComponent/Home.css
+++ b/src/Components/HeaderComponents/HomeComponent/Home.css
@@ -30,7 +30,7 @@ border: 1px solid transparent;
 /* border-radius: 15px; */
 -webkit-backdrop-filter: blur(12px);
 backdrop-filter: blur(12px);
-box-shadow: rgb(72, 72, 73) 0px 1px 2px 0px, rgb(44, 45, 63) 0px 2px 6px 2px;
+box-shadow: rgb(0, 0, 0) 0px 1px 3px 0px, rgb(0, 0, 0) 0px 2px 6px 2px;
 
 
 }
@@ -57,12 +57,12 @@ justify-content: center ;
 }
 .first-text{
     font-size: 1.5rem;
-    color: rgb(43, 133, 252);
+    color: #2767fc;
     /* display: none; */
 }
 .title-text-box{
   /* margin-bottom: 0.2rem; */
-
+  /* border: 1px solid red; */
     /* border: 1px solid rgb(138, 135, 135); */
     text-align: center;
 }
@@ -130,15 +130,13 @@ justify-content: center ;
     a:visited{
         color: #0336ac;
     }
-
-        .home-btns:hover{
+ .home-btns:hover{
             /* color: white; */
             /* box-shadow: none; */
             /* border: 1px solid #04d1f5; */
             /* box-shadow: #04d1f5 0px 1px 4px 0px; */
             box-shadow: #0c3baa 0px 1px 2px;
         }
-
         .home-img{
             height: 25rem ;
         }
